# audioreach-conf

./: README.md  configure.ac
ci/: build.sh
qcom/: Makefile.am
qcom/qli/qcm6490/: Makefile.am  card-defs.xml
qcom/qli/qcm6490/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/qcs8275/: Makefile.am  card-defs.xml  config.pc.in
qcom/qli/qcs8275/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/qcs8300/: Makefile.am  card-defs.xml
qcom/qli/qcs8300/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/qcs9075/: Makefile.am  card-defs.xml
qcom/qli/qcs9075/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
qcom/qli/qcs9100/: Makefile.am  card-defs.xml
qcom/qli/qcs9100/acdbdata/: acdb_cal.acdb  workspaceFileXml.qwsp
